ecoM06_ecoM06A-exemploTrabalhoParte02/exemploBison.output
Terminals unused in grammar

   STRING
   COMMA
   GQ
   '%'


Grammar

    0 $accept: programa $end

    1 programa: lista_comando

    2 lista_comando: comando EOL lista_comando
    3              | comando EOL

    4 bloco: OPEN_BLOCK lista_comando CLOSE_BLOCK

    5 ident: ID

    6 exp: NUMREAL
    7    | NUMINTEIRO
    8    | ident
    9    | soma
   10    | subtracao
   11    | divisao
   12    | multiplicacao

   13 atribuicao: REAL ident '=' exp
   14           | INT ident '=' exp
   15           | CHAR ident '=' exp

   16 comando: atribuicao
   17        | bloco
   18        | if_comando
   19        | while_comando

   20 comparacao: igualdade
   21           | diferenca

   22 soma: exp '+' exp

   23 subtracao: exp '-' exp

   24 divisao: exp '/' exp

   25 multiplicacao: exp '*' exp

   26 igualdade: exp EQ exp

   27 diferenca: exp NE exp

   28 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE bloco
   29           | IF OPEN_BRACE comparacao CLOSE_BRACE bloco ELSE bloco

   30 while_comando: WHILE OPEN_BRACE comparacao CLOSE_BRACE bloco


Terminals, with rules where they appear

$end (0) 0
'%' (37)
'*' (42) 25
'+' (43) 22
'-' (45) 23
'/' (47) 24
'=' (61) 13 14 15
error (256)
IF (258) 28 29
ELSE (259) 29
WHILE (260) 30
ID (261) 5
NUMINTEIRO (262) 7
NUMREAL (263) 6
STRING (264)
EOL (265) 2 3
INT (266) 14
REAL (267) 13
CHAR (268) 15
OPEN_BRACE (269) 28 29 30
CLOSE_BRACE (270) 28 29 30
OPEN_BLOCK (271) 4
CLOSE_BLOCK (272) 4
COMMA (273)
EQ (274) 26
GQ (275)
NE (276) 27


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
programa (29)
    on left: 1, on right: 0
lista_comando (30)
    on left: 2 3, on right: 1 2 4
bloco (31)
    on left: 4, on right: 17 28 29 30
ident (32)
    on left: 5, on right: 8 13 14 15
exp (33)
    on left: 6 7 8 9 10 11 12, on right: 13 14 15 22 23 24 25 26 27
atribuicao (34)
    on left: 13 14 15, on right: 16
comando (35)
    on left: 16 17 18 19, on right: 2 3
comparacao (36)
    on left: 20 21, on right: 28 29 30
soma (37)
    on left: 22, on right: 9
subtracao (38)
    on left: 23, on right: 10
divisao (39)
    on left: 24, on right: 11
multiplicacao (40)
    on left: 25, on right: 12
igualdade (41)
    on left: 26, on right: 20
diferenca (42)
    on left: 27, on right: 21
if_comando (43)
    on left: 28 29, on right: 18
while_comando (44)
    on left: 30, on right: 19


state 0

    0 $accept: . programa $end

    IF          shift, and go to state 1
    WHILE       shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    CHAR        shift, and go to state 5
    OPEN_BLOCK  shift, and go to state 6

    programa       go to state 7
    lista_comando  go to state 8
    bloco          go to state 9
    atribuicao     go to state 10
    comando        go to state 11
    if_comando     go to state 12
    while_comando  go to state 13


state 1

   28 if_comando: IF . OPEN_BRACE comparacao CLOSE_BRACE bloco
   29           | IF . OPEN_BRACE comparacao CLOSE_BRACE bloco ELSE bloco

    OPEN_BRACE  shift, and go to state 14


state 2

   30 while_comando: WHILE . OPEN_BRACE comparacao CLOSE_BRACE bloco

    OPEN_BRACE  shift, and go to state 15


state 3

   14 atribuicao: INT . ident '=' exp

    ID  shift, and go to state 16

    ident  go to state 17


state 4

   13 atribuicao: REAL . ident '=' exp

    ID  shift, and go to state 16

    ident  go to state 18


state 5

   15 atribuicao: CHAR . ident '=' exp

    ID  shift, and go to state 16

    ident  go to state 19


state 6

    4 bloco: OPEN_BLOCK . lista_comando CLOSE_BLOCK

    IF          shift, and go to state 1
    WHILE       shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    CHAR        shift, and go to state 5
    OPEN_BLOCK  shift, and go to state 6

    lista_comando  go to state 20
    bloco          go to state 9
    atribuicao     go to state 10
    comando        go to state 11
    if_comando     go to state 12
    while_comando  go to state 13


state 7

    0 $accept: programa . $end

    $end  shift, and go to state 21


state 8

    1 programa: lista_comando .

    $default  reduce using rule 1 (programa)


state 9

   17 comando: bloco .

    $default  reduce using rule 17 (comando)


state 10

   16 comando: atribuicao .

    $default  reduce using rule 16 (comando)


state 11

    2 lista_comando: comando . EOL lista_comando
    3              | comando . EOL

    EOL  shift, and go to state 22


state 12

   18 comando: if_comando .

    $default  reduce using rule 18 (comando)


state 13

   19 comando: while_comando .

    $default  reduce using rule 19 (comando)


state 14

   28 if_comando: IF OPEN_BRACE . comparacao CLOSE_BRACE bloco
   29           | IF OPEN_BRACE . comparacao CLOSE_BRACE bloco ELSE bloco

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 26
    comparacao     go to state 27
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31
    igualdade      go to state 32
    diferenca      go to state 33


state 15

   30 while_comando: WHILE OPEN_BRACE . comparacao CLOSE_BRACE bloco

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 26
    comparacao     go to state 34
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31
    igualdade      go to state 32
    diferenca      go to state 33


state 16

    5 ident: ID .

    $default  reduce using rule 5 (ident)


state 17

   14 atribuicao: INT ident . '=' exp

    '='  shift, and go to state 35


state 18

   13 atribuicao: REAL ident . '=' exp

    '='  shift, and go to state 36


state 19

   15 atribuicao: CHAR ident . '=' exp

    '='  shift, and go to state 37


state 20

    4 bloco: OPEN_BLOCK lista_comando . CLOSE_BLOCK

    CLOSE_BLOCK  shift, and go to state 38


state 21

    0 $accept: programa $end .

    $default  accept


state 22

    2 lista_comando: comando EOL . lista_comando
    3              | comando EOL .

    IF          shift, and go to state 1
    WHILE       shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    CHAR        shift, and go to state 5
    OPEN_BLOCK  shift, and go to state 6

    $default  reduce using rule 3 (lista_comando)

    lista_comando  go to state 39
    bloco          go to state 9
    atribuicao     go to state 10
    comando        go to state 11
    if_comando     go to state 12
    while_comando  go to state 13


state 23

    7 exp: NUMINTEIRO .

    $default  reduce using rule 7 (exp)


state 24

    6 exp: NUMREAL .

    $default  reduce using rule 6 (exp)


state 25

    8 exp: ident .

    $default  reduce using rule 8 (exp)


state 26

   22 soma: exp . '+' exp
   23 subtracao: exp . '-' exp
   24 divisao: exp . '/' exp
   25 multiplicacao: exp . '*' exp
   26 igualdade: exp . EQ exp
   27 diferenca: exp . NE exp

    EQ   shift, and go to state 40
    NE   shift, and go to state 41
    '-'  shift, and go to state 42
    '+'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45


state 27

   28 if_comando: IF OPEN_BRACE comparacao . CLOSE_BRACE bloco
   29           | IF OPEN_BRACE comparacao . CLOSE_BRACE bloco ELSE bloco

    CLOSE_BRACE  shift, and go to state 46


state 28

    9 exp: soma .

    $default  reduce using rule 9 (exp)


state 29

   10 exp: subtracao .

    $default  reduce using rule 10 (exp)


state 30

   11 exp: divisao .

    $default  reduce using rule 11 (exp)


state 31

   12 exp: multiplicacao .

    $default  reduce using rule 12 (exp)


state 32

   20 comparacao: igualdade .

    $default  reduce using rule 20 (comparacao)


state 33

   21 comparacao: diferenca .

    $default  reduce using rule 21 (comparacao)


state 34

   30 while_comando: WHILE OPEN_BRACE comparacao . CLOSE_BRACE bloco

    CLOSE_BRACE  shift, and go to state 47


state 35

   14 atribuicao: INT ident '=' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 48
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31


state 36

   13 atribuicao: REAL ident '=' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 49
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31


state 37

   15 atribuicao: CHAR ident '=' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 50
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31


state 38

    4 bloco: OPEN_BLOCK lista_comando CLOSE_BLOCK .

    $default  reduce using rule 4 (bloco)


state 39

    2 lista_comando: comando EOL lista_comando .

    $default  reduce using rule 2 (lista_comando)


state 40

   26 igualdade: exp EQ . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 51
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31


state 41

   27 diferenca: exp NE . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 52
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31


state 42

   23 subtracao: exp '-' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 53
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31


state 43

   22 soma: exp '+' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 54
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31


state 44

   25 multiplicacao: exp '*' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 55
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31


state 45

   24 divisao: exp '/' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24

    ident          go to state 25
    exp            go to state 56
    soma           go to state 28
    subtracao      go to state 29
    divisao        go to state 30
    multiplicacao  go to state 31


state 46

   28 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE . bloco
   29           | IF OPEN_BRACE comparacao CLOSE_BRACE . bloco ELSE bloco

    OPEN_BLOCK  shift, and go to state 6

    bloco  go to state 57


state 47

   30 while_comando: WHILE OPEN_BRACE comparacao CLOSE_BRACE . bloco

    OPEN_BLOCK  shift, and go to state 6

    bloco  go to state 58


state 48

   14 atribuicao: INT ident '=' exp .
   22 soma: exp . '+' exp
   23 subtracao: exp . '-' exp
   24 divisao: exp . '/' exp
   25 multiplicacao: exp . '*' exp

    '-'  shift, and go to state 42
    '+'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 14 (atribuicao)


state 49

   13 atribuicao: REAL ident '=' exp .
   22 soma: exp . '+' exp
   23 subtracao: exp . '-' exp
   24 divisao: exp . '/' exp
   25 multiplicacao: exp . '*' exp

    '-'  shift, and go to state 42
    '+'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 13 (atribuicao)


state 50

   15 atribuicao: CHAR ident '=' exp .
   22 soma: exp . '+' exp
   23 subtracao: exp . '-' exp
   24 divisao: exp . '/' exp
   25 multiplicacao: exp . '*' exp

    '-'  shift, and go to state 42
    '+'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 15 (atribuicao)


state 51

   22 soma: exp . '+' exp
   23 subtracao: exp . '-' exp
   24 divisao: exp . '/' exp
   25 multiplicacao: exp . '*' exp
   26 igualdade: exp EQ exp .

    '-'  shift, and go to state 42
    '+'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 26 (igualdade)


state 52

   22 soma: exp . '+' exp
   23 subtracao: exp . '-' exp
   24 divisao: exp . '/' exp
   25 multiplicacao: exp . '*' exp
   27 diferenca: exp NE exp .

    '-'  shift, and go to state 42
    '+'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 27 (diferenca)


state 53

   22 soma: exp . '+' exp
   23 subtracao: exp . '-' exp
   23          | exp '-' exp .
   24 divisao: exp . '/' exp
   25 multiplicacao: exp . '*' exp

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 23 (subtracao)


state 54

   22 soma: exp . '+' exp
   22     | exp '+' exp .
   23 subtracao: exp . '-' exp
   24 divisao: exp . '/' exp
   25 multiplicacao: exp . '*' exp

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 22 (soma)


state 55

   22 soma: exp . '+' exp
   23 subtracao: exp . '-' exp
   24 divisao: exp . '/' exp
   25 multiplicacao: exp . '*' exp
   25              | exp '*' exp .

    $default  reduce using rule 25 (multiplicacao)


state 56

   22 soma: exp . '+' exp
   23 subtracao: exp . '-' exp
   24 divisao: exp . '/' exp
   24        | exp '/' exp .
   25 multiplicacao: exp . '*' exp

    $default  reduce using rule 24 (divisao)


state 57

   28 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE bloco .
   29           | IF OPEN_BRACE comparacao CLOSE_BRACE bloco . ELSE bloco

    ELSE  shift, and go to state 59

    $default  reduce using rule 28 (if_comando)


state 58

   30 while_comando: WHILE OPEN_BRACE comparacao CLOSE_BRACE bloco .

    $default  reduce using rule 30 (while_comando)


state 59

   29 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE bloco ELSE . bloco

    OPEN_BLOCK  shift, and go to state 6

    bloco  go to state 60


state 60

   29 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE bloco ELSE bloco .

    $default  reduce using rule 29 (if_comando)
